<resources>
    <string name="app_name">Family Map Client</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="server">Server Information:</string>
    <string name="login_info">Login Information:</string>
    <string name="register_info">Registration Information:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_fragment_message">This is my map fragment!</string>
    <string name="search_box_hint">Search for&#8239;</string>
    <string name="settings_menu">Settings</string>
    <string name="search">Search</string>
    <string name="show_spouse_lines">Show spouse lines</string>
    <string name="show_life_story_lines">Show life story lines</string>
    <string name="family_tree_lines">Show family tree lines</string>
    <string name="show_father_s_side">Show father\'s side</string>
    <string name="show_mother_s_side">Show mother\'s side</string>
    <string name="show_male_events">Show male events</string>
    <string name="show_female_events">Show female events</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name_label">First Name</string>
    <string name="person_group_title">Family</string>
    <string name="event_group_title">Life Events</string>
    <string name="search_hint">Search for...</string>
    <string name="clear_search">Clear Search</string>
</resources>